Use Collections.emptyList to remove iterator initialization
Collections.emptyList returns the same instance with a static iterator